--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "lefthook": "^1.6.5",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
+    "prettier-plugin-embed": "^0.4.15",
+    "prettier-plugin-sql": "^0.18.0",
     "typescript": "^5.3.3"
   },
   "engines": {
