--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
