--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -19,6 +19,7 @@
     "@types/pg": "^8.11.0",
     "@zodios/core": "^10.9.6",
     "@zodios/express": "^10.6.1",
+    "bignumber.js": "^9.1.2",
     "chart.js": "^4.4.1",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^3.3.1",
@@ -33,6 +34,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-use": "^17.5.0",
+    "server-only": "^0.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
