--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@types/pg": "^8.11.0",
     "@zodios/core": "^10.9.6",
     "@zodios/express": "^10.6.1",
@@ -29,6 +32,7 @@
     "lucide-react": "^0.359.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "nuqs": "^1.17.1",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
