Replace next ui with shadcn ui + dashboard stats (#7)

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -12,29 +12,35 @@
     "format:fix": "prettier --write ."
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.1",
-    "@nextui-org/react": "^2.2.9",
-    "@nextui-org/system": "^2.0.15",
-    "@nextui-org/theme": "^2.1.17",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@types/pg": "^8.11.0",
     "@zodios/core": "^10.9.6",
     "@zodios/express": "^10.6.1",
     "bignumber.js": "^9.1.2",
     "chart.js": "^4.4.1",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "drizzle-orm": "^0.29.3",
-    "framer-motion": "^11.0.3",
     "lightweight-charts": "^4.1.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.359.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "nuqs": "^1.17.1",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-use": "^17.5.0",
     "server-only": "^0.0.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
