--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-table": "^8.15.0",
     "@types/pg": "^8.11.0",
     "@zodios/core": "^10.9.6",
     "@zodios/express": "^10.6.1",
