add vercel analytics

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@radix-ui/react-menubar": "^1.0.4",
     "@tanstack/react-table": "^8.15.0",
     "@types/pg": "^8.11.0",
     "@zodios/core": "^10.9.6",
@@ -53,6 +53,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
+    "@vercel/analytics": "^1.2.2",
     "autoprefixer": "^10.4.17",
     "drizzle-kit": "^0.20.13",
     "eslint": "^8.56.0",
