add linea transactions and blocks syncer

--- a/common/package.json
+++ b/common/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.1",
     "drizzle-orm": "^0.29.3",
     "mobula-sdk": "^1.5.4",
+    "p-retry": "^6.2.0",
     "p-throttle": "^6.1.0",
     "pino": "^8.17.2",
     "postgres": "^3.4.3",
